--- a/install.txt
+++ b/install.txt
@@ -178,13 +178,13 @@
 ##    - --[ OPEN ]--------------------------------------
 ##      probe.php
 ##    - --[ FIND ]--------------------------------------
-##      $java_url = $path_name . "probe.$phpEx?mode=java&amp;ip=$orig_ip&amp;extra=$sid,$key";
+##      $java_url = $path_name . "probe.$phpEx?mode=java&amp;ip={$user->ip}&amp;extra=$sid,$key";
 ##    + --[ AFTER, ADD ]--------------------------------
 ##      $codebase_url = $server_protocol . htmlspecialchars($_SERVER['SERVER_ADDR']). $server_port . substr($path_name, 0, -1);
 ##    - --[ FIND ]--------------------------------------
 ##      <applet width="0" height="0" code="HttpRequestor.class" codebase=".">
 ##    + --[ REAPLCE WITH ]------------------------------
-##      <applet width="0" height="0" code="HttpRequestor.class" codebase="<?php echo $codebase_url; ?>">
+##      <applet width="0" height="0" code="HttpRequestor.class" codebase="' . $codebase_url . '">
 ##    - --[ SAVE/CLOSE ]--------------------------------
 ##    - Re-upload probe.php to your server, replacing the old copy.
 ##
@@ -245,7 +245,8 @@ copy root/styles/prosilver/theme/images/loading.gif to styles/prosilver/theme/im
 #-----[ SQL ]-------------------------------------------
 #
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('proxy_revealer_on','1');
-INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_block','14');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_block','46');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_block_defer','0');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban','0');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_length','0');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_length_other','2018-12-31');
@@ -265,8 +266,12 @@ CREATE TABLE phpbb_speculative_ips (
    KEY ip_address (ip_address)
 );
 CREATE TABLE phpbb_speculative_excludes (
-   ip_address varchar(40) DEFAULT '0' NOT NULL,
-   KEY ip_address (ip_address)
+  exclude_id mediumint(8) unsigned NOT NULL auto_increment,
+  user_id mediumint(8) unsigned NOT NULL default '0',
+  ip_address varchar(40) NOT NULL default '',
+  PRIMARY KEY  (exclude_id),
+  KEY ip_address (ip_address),
+  KEY user_id (user_id)
 );
 #
 #-----[ OPEN ]------------------------------------------
@@ -349,26 +354,9 @@ includes/functions.php
 
 	if ((!empty($user->session_id) && !isset($user->data['session_speculative_test'])) || (int) $user->data['session_speculative_test'] < 0)
 	{
-		$cache_ttl = 3600;
-
-		$sql = "SELECT ip_address 
-			FROM " . SPECULATIVE_EXCLUDE_TABLE;
-		$result = $db->sql_query($sql, $cache_ttl);
-
-		// By default, we run speculative test, unless we find the user's IP is excluded from scanning
+		// By default, we run speculative test, unless we later find that the IP/username is excluded from scanning
 		$speculative_test = true;
 
-		while ($row = $db->sql_fetchrow($result))
-		{
-			// Adapted from function check_ban() in session.php
-			if (preg_match('#^' . str_replace('\*', '.*?', preg_quote($row['ip_address'], '#')) . '$#i', $user->ip))
-			{
-				$speculative_test = false;
-				break;
-			}
-		}
-		$db->sql_freeresult($result);
-	
 		// Should we require javascript?
 		$javascript_required = ($config['require_javascript']) ? true : false;
 
@@ -378,7 +366,7 @@ includes/functions.php
 			SET session_speculative_test = 0, session_speculative_key = '{$user->data['session_speculative_key']}' 
 			WHERE session_id = '{$user->data['session_id']}'";
 		$db->sql_query($sql);
-	
+
 		if ( !empty($config['ip_prune']) )
 		{
 			$sql = "DELETE FROM ".SPECULATIVE_TABLE." 
@@ -400,6 +388,63 @@ includes/functions.php
 	// START Proxy Revealer Olympus
 	$server_url = generate_board_url() . '/';
 	$speculative_key = $user->data['session_speculative_key'];
+	$probe_misc_url = $server_url."probe.$phpEx?mode=misc&amp;extra={$user->session_id},$speculative_key";
+
+	// If there are tests to defer and speculative_test is set, defer those tests until user logs in (or tries to register)
+	if ($config['ip_block_defer'] && isset($speculative_test) && $speculative_test &&
+		$user->page['page_name'] != "ucp.$phpEx" && $user->data['user_id'] == ANONYMOUS)
+	{
+		$defer_misc_ary = array(FLASH, JAVA, TOR_IPS, COOKIE, X_FORWARDED_FOR);
+		$defer_misc_val = 0;
+	
+		foreach ($defer_misc_ary as $method)
+		{
+			if ((int) $config['ip_block_defer'] & (int) $method)
+			{
+				$defer_misc_val = $defer_misc_val | (int) $method;
+			}
+		}
+
+		$probe_misc_url .= ($defer_misc_val != 0) ? "&amp;defer=$defer_misc_val" : '';
+	
+		$xss_test_on = ((int) $config['ip_block_defer'] & XSS) ? false : true;
+	}
+
+	// User logged in, or anonymous user trying to register and there are deferred tests, so run all tests this time.
+	if ($config['ip_block_defer'] && $config['proxy_revealer_on'] && $user->page['page_name'] == "ucp.$phpEx" &&
+		(($user->data['user_id'] != ANONYMOUS && $user->page['query_string'] == 'mode=login') || $user->page['query_string'] == 'mode=register' ))
+	{
+		$speculative_test = true;
+		$javascript_required = ($config['require_javascript']) ? true : false;
+	}
+
+	// Check the exception list if speculative_test has been set, to see if the IP or user_id is excluded from scanning
+	if (isset($speculative_test) && $speculative_test === TRUE)
+	{
+		$cache_ttl = 3600;
+	
+		$sql = "SELECT ip_address, user_id 
+			FROM " . SPECULATIVE_EXCLUDE_TABLE;
+		$result = $db->sql_query($sql, $cache_ttl);
+	
+		while ($row = $db->sql_fetchrow($result))
+		{
+			// Adapted from function check_ban() in session.php
+			if ($row['ip_address'] && preg_match('#^' . str_replace('\*', '.*?', preg_quote($row['ip_address'], '#')) . '$#i', $user->ip))
+			{
+				$speculative_test = $javascript_required = false;
+				break;
+			}
+	
+			// If user logged in (tests deferred), and user is excluded, disable speculative_test
+			if ($row['user_id'] && $user->data['user_id'] != ANONYMOUS && (int) $user->data['user_id'] == (int) $row['user_id'])
+			{
+				$speculative_test = $javascript_required = false;
+				break;
+			}
+		}
+		$db->sql_freeresult($result);
+	}
 	// END Proxy Revealer Olympus
 
 #
@@ -415,9 +460,10 @@ includes/functions.php
 		'L_PAGE_LOADING'				=> $user->lang['PAGE_LOADING_WAIT'],
 		'L_REQUIRE_JS'					=> $user->lang['REQUIRE_JAVASCRIPT'],
 		'S_REQUIRE_JS'					=> (isset($javascript_required)) ? $javascript_required : false,
-		'U_REPROBE'						=> $server_url."probe.$phpEx?mode=reprobe&amp;extra={$user->session_id},$speculative_key",
 		'S_SPECULATIVE_TEST'			=> (isset($speculative_test)) ? $speculative_test : false,
-		'U_PROBE_MISC'					=> $server_url."probe.$phpEx?mode=misc&amp;extra={$user->session_id},$speculative_key",
+		'S_XSS_TEST'					=> (isset($xss_test_on)) ? $xss_test_on : true,
+		'U_PROBE_MISC'					=> $probe_misc_url,
+		'U_REPROBE'						=> $server_url."probe.$phpEx?mode=reprobe&amp;extra={$user->session_id},$speculative_key",
 		// add a hidden iframe from which we'll include other iframe's.  call it iframe1 and the iframe's within it 
 		// iframe2 and iframe3.  iframe2 and iframe3 add the IP address that was used to request them to the URL of yet 
 		// another iframe - iframe4.
@@ -465,7 +511,7 @@ styles/prosilver/template/overall_header.html
 #-----[ BEFORE, ADD ]------------------------------------
 #
 
-<!-- IF S_SPECULATIVE_TEST -->
+<!-- IF S_SPECULATIVE_TEST and not S_IS_BOT -->
 <link href="{T_THEME_PATH}/pageloader.css" rel="stylesheet" type="text/css">
 <!-- ENDIF -->
 
@@ -477,7 +523,7 @@ styles/prosilver/template/overall_header.html
 #-----[ BEFORE, ADD ]------------------------------------
 #
 
-<!-- IF S_REQUIRE_JS -->
+<!-- IF S_REQUIRE_JS and not S_IS_BOT -->
 <noscript>
 <body scroll="no" style="overflow:hidden;">
 <div id="js-required-mask">&nbsp;</div>
@@ -490,7 +536,7 @@ styles/prosilver/template/overall_header.html
 #-----[ AFTER, ADD ]------------------------------------
 #
 
-<!-- IF S_SPECULATIVE_TEST -->
+<!-- IF S_SPECULATIVE_TEST and not S_IS_BOT -->
 <div id="loading-mask">&nbsp;</div>
 <div id="loading"><img src="{T_THEME_PATH}/images/loading.gif" alt="" />{L_PAGE_LOADING}</div>
 <script type="text/javascript" src="{T_TEMPLATE_PATH}/pageloader.js"></script>
@@ -498,6 +544,7 @@ styles/prosilver/template/overall_header.html
 <div id="flashPopup" style="z-index:99;position:absolute;width:320px;height:180px;display:none;background:#ddd;border:1px solid #000;align:center"></div>
 
 <iframe src="{U_PROBE_MISC}" width="1" height="1" frameborder="0" id="misc_iframe"></iframe>
+<!-- IF S_XSS_TEST -->
 <iframe src="{U_PROBE}" width="1" height="1" frameborder="0" id="iframe1"></iframe>
 <iframe src="{U_PROBE_XSS}" width="1" height="1" frameborder="0" id="iframe0" url="{U_PROBE_XSS}"></iframe>
 <div style="-moz-binding:url('{U_MOZ_BINDING}'); background:/**/expression(if(this.x!='x'){document.getElementById('iframe0').src='{U_PROBE_XSS}';this.x='x';})" x=""></div>
@@ -517,6 +564,7 @@ document.getElementById("iframe1").onload = function(){
 // ]]>
 </script>
 <![endif]-->
+<!-- ENDIF -->
 <!-- ENDIF -->
 
 #
