--- a/trunk/contrib/install.txt
+++ b/trunk/contrib/install.txt
@@ -110,6 +110,8 @@
 ##
 ## Choose only one of the following three scripts to run:
 ##
+## The scripts are available in the contrib/daemon/ directory
+##
 ## * xmlsockd.pl: What most admins want to run.
 ##   - Single Threaded script which could handle a few simultaneous connections at the same time.
 ##   (meaning few milliseconds). Multiplexing using IO::Select to handle multiple clients, in 
@@ -131,7 +133,7 @@
 ##   - Supports same as above, with the optional configuration of number of threads/listener pool.
 ## 
 ## * xmlsockd-basic.pl: A barebone version of the script
-##   for admins who run on systems with very limited perl installations that don't have modules needed 
+##   for admins who run on systems with very limited perl installations that don't have the modules needed 
 ##   to run xmlsockd.pl such as IO::Socket, IO::Select, Log::Dispatch, Proc::PID::File, etc...
 ##
 ##
